--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,6 @@
     "ChenArno <517625126@qq.com>"
   ],
   "license": "ISC",
-  "homepage": "",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -15,6 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "animate.css": "^4.1.0",
+    "bootstrap-less": "^3.3.4"
   }
 }
